Debug file class loader?! Whup Whup!
I can't belive this actually works